  collections list.

- Export secrets methods and parse raw models.

- Styles: Add darkreader dark theme option. See :ref:`dark-mode`.

- Connections: Add general tab contents to connect form.

- Support MongoDB 5.2 aggregations.

Bug Fixes:

- Remove unused vars.

- SSH Tunnel: Remove unused import.

- BSON Transpilers: Account for bson Decimal128 validation changes.

- Make SSH tunnel use Socks5.

- Compass Logging: Bump mongodb-log-writer to allow browser envs.

- Move theme menu from help to view in non mac/darwin.

- Connections:

  - Hide socks tab on SSH form.

  - Add SSH label.

- Remove compass-components from prod dependencies.

- toggle-shell: Use key instead of keyCode.

- data-service:

  - Do not return name from adapted dbStats
  
  - Do not ignore directConnection=false

- mocha-config-compass: Disable source map processing when running code
  in electron / web runtime in tests

`All JIRA issues closed in 1.30.1
<https://jira.mongodb.org/issues/?jql=project%20%3D%20COMPASS%20AND%20fixVersion%20%3D%201.30.1>`__.

|compass| 1.29.6
----------------

*Released December 20, 2021*

New Features:

- Adds loading states for collection in sidebar.

- Improves identification of Atlas cluster.

- Improve telemetry connection tracking.

- Dependency Upgrades:

  - Bumps `react-ace <https://www.npmjs.com/package/react-ace>`__ to
    version 9.5.0.

  - Bumps Node.js driver to version
    `4.2.1 <https://github.com/mongodb/node-mongodb-native/releases/tag/v4.2.1>`__.
    
  - Bump ``mongosh`` version to :mongosh:`1.1.6 </changelog/#v1.1.6>`.

Bug Fixes:

- Removes expired link from license.

- Fixes error handling in ``listCollections``.

- Keeps ``tlsCertificateFile`` as URI parameter.

- Hides full-text search stages for time series and views.

- Does not overfetch ``connectionInfo`` and update the state
  too often.

`Full changelog available on GitHub
<https://github.com/mongodb-js/compass/releases/tag/v1.29.6>`__.


|compass| 1.29.5
----------------
